style: 🎀 fix overflow in student and parent dashboards

--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -21,3 +21,7 @@
   height: 200px !important;
   border-radius: 50% !important;
 }
+
+.overflow-x-scroll {
+  overflow-x: scroll !important;
+}
